--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>DOM learning</title>
+    <style>
+        body {
+            background: black;
+            color: whitesmoke;
+        }
+    </style>
 </head>
+
 <body>
     <div class="bg-black">
-        <h1 class="heading">DOM Learning on Chai aur Code</h1>
+        <h1 class="heading" id="title">DOM Learning on Chai aur Code <span style="display: none;">text text</span></h1>
+
+        <h2>Lorem ipsum dolor sit amet.</h2>
+        <h2>Lorem ipsum dolor sit.</h2>
+        <h2>Lorem ipsum dolor.</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, laudantium.</p>
+
+        <ul>
+            <li class="list-item">one</li>
+            <li class="list-item">two</li>
+            <li class="list-item">three</li>
+            <li class="list-item">four</li>
+        </ul>
+
+        <!-- 
+            - title.innerHTML
+            DOM Learning on Chai aur Code <span style="display: none;">text text</span>
+
+            - title.innerText
+            DOM Learning on Chai aur Code
+
+            -title.textContent
+            DOM Learning on Chai aur Code text text
+         -->
     </div>
 </body>
+
 </html>
